[tool.poetry]
name = "fantasynames"
version = "0.1.2"
description="A fantasy themed random name generator."
authors = ["Jessica Peck <jessypeck@gmail.com>"]
homepage = "https://github.com/jessypeck/fantasynames"
repository = "https://github.com/woedeninc/fantasynames"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
